[tool.poetry]
name = "SKSER⁴⁰⁴"
version = "0.3.0"
description = " A simple Telegram bot that converts a phone number to a direct whatsapp chat link"
license = "GPLv3"
authors = ["Amr <@Sanjith_kumar404>"]

[tool.poetry.dependencies]
python = "3.12.*"
python-telegram-bot = "^20.6"
python-dotenv = "^1.0.0"
